[package]
name = "nugget-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
validator = { version = "0.16.0", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
sea-orm = { version = "0.11.0", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
#sea-orm-rocket = "0.5.2"
diesel = { version = "2.0.3", features = ["postgres"] }
dotenvy = "0.15.6"