[package]
name = "nugget-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
validator = { version = "0.16.0", features = ["derive"] }
# tokio = { version = "1.25.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
dotenvy = "0.15.6"